--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
 <body>
     <!-- Inizio Header  -->
     <header>
-
+        <div class="first-header"></div>
+        <div class="largest-header"></div>
     </header>
     <!-- Fine Header  -->
 
     <!-- Inizio main  -->
-    <main>
-        <div class="simple-container"></div>
-        <div class="container"></div>
+    <main class="container">
+        <div class="content">
+
+        </div>
     </main>
     <!-- Fine main  -->
     <!-- Inizio footer  -->
     <footer>
-
+        <div></div>
     </footer>
     <!-- Fine footer  -->
 
