Main with float

--- a/index.html
+++ b/index.html
@@ -17,14 +17,66 @@
 
     <!-- Inizio main  -->
     <main class="container">
-        <div class="content">
-
+        <div class="content intro">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Incidunt labore laborum ipsam, hic inventore neque, est 
+                tempore reiciendis adipisci numquam quo quas distinctio 
+                eaque doloremque pariatur saepe id delectus modi. lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Incidunt labore laborum ipsam, hic inventore neque, est 
+                    tempore reiciendis adipisci numquam quo quas distinctio 
+                    eaque doloremque pariatur saepe id delectus modi.</p>
         </div>
+        <div class="content left-sidebar">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Incidunt labore laborum ipsam, hic inventore neque, est 
+                tempore reiciendis adipisci numquam quo quas distinctio 
+                eaque doloremque pariatur saepe id delectus modi.lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Incidunt labore laborum ipsam, hic inventore neque, est 
+                tempore reiciendis adipisci numquam quo quas distinctio 
+                eaque doloremque pariatur saepe id delectus modilorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Incidunt labore laborum ipsam, hic inventore neque, est 
+                tempore reiciendis adipisci numquam quo quas distinctio 
+                eaque doloremque pariatur saepe id delectus modi</p>
+        </div>
+        <div class="center content">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Incidunt labore laborum ipsam, hic inventore neque, est 
+                tempore reiciendis adipisci numquam quo quas distinctio 
+                eaque doloremque pariatur saepe id delectus modi.lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Incidunt labore laborum ipsam, hic inventore neque, est 
+                tempore reiciendis adipisci numquam quo quas distinctio 
+                eaque doloremque pariatur saepe id delectus modilorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Incidunt labore laborum ipsam, hic inventore neque, est 
+                tempore reiciendis adipisci numquam quo quas distinctio 
+                eaque doloremque pariatur saepe id delectus modiLorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Incidunt labore laborum ipsam, hic inventore neque, est 
+                tempore reiciendis adipisci numquam quo quas distinctio 
+                eaque doloremque pariatur saepe id delectus modi.lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Incidunt labore laborum ipsam, hic inventore neque, est 
+                tempore reiciendis adipisci numquam quo quas distinctio 
+                eaque doloremque pariatur saepe id delectus modilorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Incidunt labore laborum ipsam, hic inventore neque, est 
+                tempore reiciendis adipisci numquam quo quas distinctio 
+                eaque doloremque pariatur saepe id delectus modi distinctio 
+                eaque doloremque pariatur saepe id delectus modi</p>
+        </div>
+        <div class="content right-sidebar">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Incidunt labore laborum ipsam, hic inventore neque, est 
+                tempore reiciendis adipisci numquam quo quas distinctio 
+                eaque doloremque pariatur saepe id delectus modi.lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Incidunt labore laborum ipsam, hic inventore neque, est 
+                tempore reiciendis adipisci numquam quo quas distinctio 
+                eaque doloremque pariatur saepe id delectus modilorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Incidunt labore laborum ipsam, hic inventore neque, est 
+                tempore reiciendis adipisci numquam quo quas distinctio 
+                eaque doloremque pariatur saepe id delectus modi</p>
+        </div>
+    </div>
     </main>
     <!-- Fine main  -->
     <!-- Inizio footer  -->
     <footer>
-        <div></div>
     </footer>
     <!-- Fine footer  -->
 
