--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                 eaque doloremque pariatur saepe id delectus modi distinctio 
                 eaque doloremque pariatur s saepe id delectus modi hic inventore neque, est 
                 tempore reiciendis adipisci numquam quo quas distinctio 
-                eaque doloremque pariatur saepe id delectus modi distinctio 
-                eaque doloremque pariatur saepe id delectus modi quas distinctio </p>
+                eaque doloremque pariatur sectus modi quas distinctio </p>
         </div>
         <div class="content right-sidebar">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
